--- a/위탁.md
+++ b/위탁.md
@@ -117,7 +117,7 @@
 <table>
 <thead>
   <tr>
-    <th>수탁업체(계열사)</th>
+    <th>수탁업체<br/>(계열사)</th>
     <th>위탁업무 내용</th>
     
   </tr>
@@ -125,7 +125,7 @@
 <tbody>
   <tr>
     <td>토스씨엑스</td> <!-- 수탁업체 -->
-    <td>	토스앱을 통한 모든 고객 상담업무 및 민원 처리, 토스모바일 상품 청약 및 명의 도용 방지, 부정이용 방지 관련 상담업무 밋 민원 처리, 번호이동을 위한 ARS 인증 대리 서비스 정합성 검토</td> <!-- 위탁업무 내용 -->
+    <td>	토스앱을 통한 모든 고객 상담업무 및 민원 처리, 토스모바일 상품 청약 및 명의 도용 방지, 부정이용 방지 관련 상담업무 및 민원 처리, 번호이동을 위한 ARS 인증 대리 서비스 정합성 검토</td> <!-- 위탁업무 내용 -->
   </tr>
     <tr>
     <td>토스페이먼츠</td> <!-- 수탁업체 -->
